run tests with github actions
* for master branch, and
* for every pull request

+ upload test report in case of test failure